--- a/frontend/non members/community-membership.html
+++ b/frontend/non members/community-membership.html
@@ -14,7 +14,7 @@
         box-sizing: border-box;
         font-family: Arial, sans-serif;
       }
-      /* ========== HEADER (Unified Dropdown Header) ========== */
+      /* ========== HEADER  ========== */
       .navbar {
         background-color: #fe1e3c;
         position: fixed;
