fixed minor event page function

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -322,7 +322,7 @@
           <p>Our platform connects artists, performers, and cultural enthusiasts, offering transformative experiences that inspire and engage. Whether you are exploring innovative art forms or seeking networking opportunities, Together Culture is your gateway to a vibrant cultural scene.</p>
           <p>Learn more about our mission and upcoming events on our <a href="https://www.togetherculture.com/" target="_blank">official website</a>.</p>
         </section>
-        <!-- Updated Our Services Section with Card Layout -->
+      
         <section class="services-info">
           <h2>Our Services &amp; Offerings</h2>
           <p>Join us and discover how shared creative experiences can transform communities.</p>
@@ -347,7 +347,7 @@
         </section>
       </div>
     </main>
-    <!-- ========== FOOTER (updated to match Key Access Membership) ========== -->
+    <!-- ========== FOOTER ========== -->
     <footer>
       <div class="f-format">
         <div class="f-list">
