--- a/frontend/non members/events.html
+++ b/frontend/non members/events.html
@@ -354,8 +354,8 @@
               <p><strong>Date:</strong> 15 April, 2025</p>
               <p><strong>Location:</strong> Cambridge Guildhall</p>
               <p>Enjoy an evening of soulful jazz music performed by renowned local artists.</p>
-              <!-- Updated to use event_id = 1 -->
-              <button class="event-btn" onclick="joinEvent(1)">Join event</button>
+              <!-- Pass the button element along with event_id -->
+              <button class="event-btn" onclick="joinEvent(this, 1)">Join event</button>
             </div>
           </div>
 
@@ -367,8 +367,7 @@
               <p><strong>Date:</strong> 5 May, 2025</p>
               <p><strong>Location:</strong> Together Culture workspace</p>
               <p>Explore thought-provoking contemporary artwork from emerging artists.</p>
-              <!-- Updated to use event_id = 2 -->
-              <button class="event-btn" onclick="joinEvent(2)">Join event</button>
+              <button class="event-btn" onclick="joinEvent(this, 2)">Join event</button>
             </div>
           </div>
 
@@ -380,8 +379,7 @@
               <p><strong>Date:</strong> 14 May, 2025</p>
               <p><strong>Location:</strong> Cambridge Theatre</p>
               <p>A creative session where writers share their poetry and stories in an open-mic setting.</p>
-              <!-- Updated to use event_id = 3 -->
-              <button class="event-btn" onclick="joinEvent(3)">Join event</button>
+              <button class="event-btn" onclick="joinEvent(this, 3)">Join event</button>
             </div>
           </div>
 
@@ -393,8 +391,7 @@
               <p><strong>Date:</strong> 25 May, 2025</p>
               <p><strong>Location:</strong> Together Culture workspace</p>
               <p>A great way to get to know all of our amazing members!</p>
-              <!-- Updated to use event_id = 4 -->
-              <button class="event-btn" onclick="joinEvent(4)">Join event</button>
+              <button class="event-btn" onclick="joinEvent(this, 4)">Join event</button>
             </div>
           </div>
         </div>
@@ -589,7 +586,9 @@
       });
 
       //  Join Event Function
-      async function joinEvent(eventId) {
+      // I modified this function so that when a user joins an event,
+      // only that event's join button is disabled, allowing them to join others.
+      async function joinEvent(button, eventId) {
         // Retrieve userId from localStorage
         const userId = localStorage.getItem("userId");
         if (!userId) {
@@ -604,6 +603,10 @@
           });
           if (response.ok) {
             alert("Successfully joined the event!");
+            // Disable only the clicked button so the user cannot join the same event twice.
+            button.disabled = true;
+            button.style.cursor = "not-allowed";
+            button.textContent = "Joined";
           } else {
             const text = await response.text();
             alert("Failed to join event: " + text);
@@ -685,7 +688,7 @@
                 <p><strong>Date:</strong> ${dateString}</p>
                 <p><strong>Time:</strong> ${timeString}</p>
                 <p>${event.description || "No description provided."}</p>
-                <button class="event-btn" onclick="joinEvent(${event.event_id})">Join event</button>
+                <button class="event-btn" onclick="joinEvent(this, ${event.event_id})">Join event</button>
               </div>
             `;
             eventsGrid.appendChild(card);
