--- a/frontend/Members/UserChat.html
+++ b/frontend/Members/UserChat.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Chat </title>
+    <title>Chat </title>
     <link rel="stylesheet" type="text/css" href="../Members/footHeadStyle.css" />
     <link rel="stylesheet" type="text/css" href="Userdashboard.css" />
     <link rel="stylesheet" type = "text/css" href="finalHeader.css">
