--- a/frontend/Members/Settings.html
+++ b/frontend/Members/Settings.html
@@ -7,7 +7,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>User Dashboard</title>
+    <title>Settings</title>
     <link rel="stylesheet" type="text/css" href="../Members/footHeadStyle.css" />
     <link rel="stylesheet" type="text/css" href="Userdashboard.css" />
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css'>
