--- a/frontend/Members/UserDigitalContentExample.html
+++ b/frontend/Members/UserDigitalContentExample.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Member Dashboard</title>
+    <title>Digital Content</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="footHeadStyle.css">
     <link rel="stylesheet" type="text/css" href="UserDashboard.css">
+    <link rel="stylesheet" type="text/css" href="finalHeader.css">
     <style>
         body {
             padding-top: 80px; /* Adjust based on navbar height */
@@ -59,27 +60,42 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <header class="nav-header">
-            <div class="nav-image">
-                <img src="../images/TC_Logos-01.png" alt="PLACEHOLDER" />
-            </div>
-        </header>
-        <div class="nav-links">
-            <ul>
-                <li><a href="#">Dashboard</a></li>
-                <li><a href="#">Calendar</a></li>
-                <li><a href="#">Chat</a></li>
-                <li><a href="#">Digital Content</a></li>
-                <li><a href="#">Settings</a></li>
-            </ul>
-        </div>
-        <div class="usr-panel">
-            <button href="#">Sign Up</button>
-            <img src="../images/EmptyBag.svg" alt="empty-shopping-bag" />
-            <img src="../images/GuestIcon.svg" alt="guest-profile-icon" />
-        </div>
-    </nav>
+   <!-- ========== TO BE FINAL HEADER ========== -->
+<nav class="navbar">
+    <!-- Left: Logo -->
+    <div class="nav-header">
+      <img src="../images/TC_Logos-01.png" alt="Together Culture Cambridge Logo" />
+    </div>
+    
+    <div class="nav-links">
+      <ul>
+        <li><a href="../index.html">Home</a></li>
+       
+        <li><a href="UserDashboard.html">Dashboard</a></li>
+        <li><a href="UserDigitalContent.html">Digital Content</a></li>
+        <li><a href="Calendar.html">Calendar</a></li>
+        <li><a href="UserChat.html">Chat</a></li>
+        <li><a href="/non members/contact-support.html">Contact Us</a></li>
+        <li><a href="Settings.html">Settings</a></li>
+      </ul>
+    </div>
+    <!-- Right: User Panel -->
+    <div class="usr-panel">
+      <!-- Show "Join Now" by default, hide if logged in -->
+     <!-- <button class="signup-btn" id="joinNowBtn">Join Now</button> -->
+  
+      <!-- Shopping bag always visible -->
+     <!-- <img src="/images/EmptyBag.svg" alt="empty-shopping-bag" /> -->
+  
+      <!-- Single user icon that changes destination depending on login state -->
+      <a id="userIconLink" href="UserDashboard.html">
+        <img src="/images/GuestIcon.svg" alt="user-profile-icon" />
+      </a>
+  
+      <!-- Logout button (hidden if not logged in) --> 
+      <button class="signup-btn" id="logoutBtn" style="display: none;">Logout</button>
+    </div>
+  </nav>
 
     <!-- Title -->
     <div class="text-center mt-4">
