--- a/frontend/non members/events.html
+++ b/frontend/non members/events.html
@@ -591,7 +591,7 @@
         try {
           // Retrieve userId from localStorage
           const userId = localStorage.getItem("userId");
-          // If no userId is found, user is effectively not identified
+         
           if (!userId) {
             alert("Please log in to join the event.");
             return;
@@ -660,7 +660,8 @@
      
       window.addEventListener("DOMContentLoaded", async () => {
         try {
-          const response = await fetch(`${backendURL}/api/events`);
+          console.log(backendURL); //TODO for debugging
+          const response = await fetch(`${backendURL}/api/events`); //what is this calling?
           if (!response.ok) {
             throw new Error("Failed to fetch events");
           }
