add admin dashboard

--- a/frontend/admin/event-report-detail.html
+++ b/frontend/admin/event-report-detail.html
@@ -13,7 +13,7 @@
       </header>
       <div class="nav-links">
         <ul>
-          <li><a href="#">About</a></li>
+          <li><a href="./dashboard.html">Dashboard</a></li>
           <li><a href="./member.html">Memberships</a></li>
           <li><a href="/frontend/non members/contact-support.html">Contact</a></li>
         </ul>
