--- a/frontend/non members/registration.html
+++ b/frontend/non members/registration.html
@@ -467,7 +467,7 @@
             if (data.role === "admin") {
               localStorage.setItem("userRole", "admin");
               alert("Hello admin!");
-              window.location.href = "/admin/member.html";
+              window.location.href = "/admin/dashboard.html";
             } else {
               localStorage.setItem("userRole", "user");
               alert("Login successful!");  
