--- a/frontend/admin/member.html
+++ b/frontend/admin/member.html
@@ -17,7 +17,7 @@
       </header>
       <div class="nav-links">
         <ul>
-          <li><a href="#">About</a></li>
+          <li><a href="./dashboard.html">Dashboard</a></li>
           <li><a href="./member.html">Memberships</a></li>
           <li><a href="./event.html">Events</a></li>
         </ul>
