--- a/frontend/Members/UserDashBenefits.html
+++ b/frontend/Members/UserDashBenefits.html
@@ -168,7 +168,7 @@
                             <h5 class="semi-transparent-bg">Exclusive Together Culture Events</h5>
                                 <div id = "benefit1" class = "hover-content">
                                      <p class="semi-transparent-bg">Attend your first Together Culture Event to redeem this benefit and start hosting your own events!</p>
-                                    <button class="btn btn-primary" onclick="handleButtonClick('benefit1', 1, 'btn1')">Claim</button>
+                                    <button class="btn btn-primary" id= "benefit1Btn">Claim</button>
                                 </div>
                       
                     </div>
@@ -209,7 +209,7 @@
                                 
                                     <p class="semi-transparent-bg">Anglia Ruskin University has partnered with us to bring select services and events to the community at large!</p>
 
-                                <button class="btn btn-primary" onclick="handleButtonClick('benefit3', 1, 'btn3')">Attend to Claim</button>
+                                <button class="btn btn-primary" id = "benefit3Btn">Attend to Claim</button>
                             </div>
                     </div>
                 </div>
