--- a/frontend/Members/UserDashboard.html
+++ b/frontend/Members/UserDashboard.html
@@ -211,8 +211,8 @@
       <img src="/images/GuestIcon.svg" alt="user-profile-icon" />
     </a>
 
-    <!-- Logout button (hidden if not logged in) --> 
-    <button class="signup-btn" id="logoutBtn" style="display: none;">Logout</button>
+    <!-- Logout button (hidden if not logged in) removed this from below to get it to work?:style="display: none;" --> 
+    <button class="signup-btn" id="logoutBtn" >Logout</button>
   </div>
 </nav>
 
@@ -298,7 +298,7 @@
             <div>
               <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="../admin/">Pricing</a></li>
+                <li><a href="../non members/non-member-page.html">Pricing</a></li>
                 <li><a href="./non members/contact-support.html">Contact</a></li>
               </ul>
             </div>
@@ -312,7 +312,7 @@
         <div class="authors">
           <h4>Authors:</h4>
           <ul>
-            <li><a href="https://github.com/TLyncks">Tai Rose (SID: 2108618)</a></li>
+            
             <li><a href="https://github.com/mgoing">Malcom Going (SID: 2372291)</a></li>
             <li><a href="https://github.com/AlessandroLaMendola">Alessandro La Mendola (SID: 2158059)</a></li>
             <li><a href="https://github.com/yusufkose-aru">Yusuf Kose (SID: 2415327)</a></li>
