--- a/frontend/Members/UserDigitalContent.html
+++ b/frontend/Members/UserDigitalContent.html
@@ -17,7 +17,7 @@
 
 body {
     padding-top: 100px; 
-    background: linear-gradient(to top, rgb(254 30 60), white); 
+    background: linear-gradient(to top, rgb(248, 119, 136), white);  
         
 }
 
@@ -112,8 +112,8 @@ body {
         <img src="/images/GuestIcon.svg" alt="user-profile-icon" />
       </a>
   
-      <!-- Logout button (hidden if not logged in) --> 
-      <button class="signup-btn" id="logoutBtn" style="display: none;">Logout</button>
+      <!-- Logout button (hidden if not logged in) style="display: none;"  --> 
+      <button class="signup-btn" id="logoutBtn" >Logout</button>
     </div>
   </nav>
   
