--- a/frontend/Members/UserDigitalContentExample.html
+++ b/frontend/Members/UserDigitalContentExample.html
@@ -11,6 +11,7 @@
     <style>
         body {
             padding-top: 80px; /* Adjust based on navbar height */
+            background: linear-gradient(to top, rgb(248, 119, 136), white); 
         }
        
         .video-container {
