--- a/frontend/Members/UserChat.html
+++ b/frontend/Members/UserChat.html
@@ -103,8 +103,8 @@
         <img src="../images/GuestIcon.svg" alt="user-profile-icon" />
       </a>
   
-      <!-- Logout button (hidden if not logged in) --> 
-      <button class="signup-btn" id="logoutBtn" style="display: none;">Logout</button>
+      <!-- Logout button (hidden if not logged in) style="display: none;" --> 
+      <button class="signup-btn" id="logoutBtn" >Logout</button>
     </div>
   </nav>
 
