--- a/frontend/Members/UserDashboard.html
+++ b/frontend/Members/UserDashboard.html
@@ -14,11 +14,9 @@
     
     <style>
       body {
-       /* background-color: #f5f5f5; */
+        background-color: #f5f5f5; 
         margin: 0;
-       /* background: linear-gradient(to top, rgb(254 30 60), white);  Example gradient */
-       background-color: #f9f9f9;
-        background-image: url('data:image/svg+xml;utf8,<svg width="40" height="40" xmlns="http://www.w3.org/2000/svg"><rect width="40" height="40" fill="%23f9f9f9"/><path d="M 0 0 L 0 40 M 0 0 L 40 0" stroke="%23ddd" stroke-width="1"/></svg>');
+        background: linear-gradient(to top, rgb(248, 119, 136), white); 
       }
       
 
