--- a/frontend/non members/non-member-page.html
+++ b/frontend/non members/non-member-page.html
@@ -566,6 +566,7 @@
               credentials: "include"
             });
             if (response.ok) {
+              localStorage.clear();
               localStorage.removeItem("loggedIn");
               alert("Logged out successfully!");
               // Redirect to login page after logout
