--- a/frontend/admin/member-detail.html
+++ b/frontend/admin/member-detail.html
@@ -244,6 +244,7 @@
             localStorage.removeItem('loggedIn')
             localStorage.removeItem('userId')
             localStorage.removeItem('userRole')
+            localStorage.removeItem('id')
             // Optionally redirect or reload
             window.location.href = '/non members/registration.html?tab=login'
           } else {
