--- a/frontend/admin/member.html
+++ b/frontend/admin/member.html
@@ -284,6 +284,7 @@
             localStorage.removeItem('loggedIn')
             localStorage.removeItem('userId')
             localStorage.removeItem('userRole')
+            localStorage.removeItem('id')
             // Optionally redirect or reload
             window.location.href = '/non members/registration.html?tab=login'
           } else {
