--- a/frontend/non members/events.html
+++ b/frontend/non members/events.html
@@ -389,10 +389,14 @@
                 Enjoy an evening of soulful jazz music performed by renowned
                 local artists.
               </p>
-              <!-- Pass the button element along with event_id -->
-              <button class="event-btn" onclick="joinEvent(this, 1)">
+
+              <button class="event-btn" onclick="joinEvent(1)">
                 Join event
               </button>
+              <!--changed 8 to 1-->
+
+              <!-- Pass the button element along with event_id -->
+              <!--  <button class="event-btn" onclick="joinEvent(this, 1)">Join event</button> -->
             </div>
           </div>
 
@@ -407,9 +411,13 @@
                 Explore thought-provoking contemporary artwork from emerging
                 artists.
               </p>
-              <button class="event-btn" onclick="joinEvent(this, 2)">
+
+              <button class="event-btn" onclick="joinEvent(2)">
                 Join event
               </button>
+              <!--changed 9 to 2-->
+
+              <!-- <button class="event-btn" onclick="joinEvent(this, 2)">Join event</button> -->
             </div>
           </div>
 
@@ -424,9 +432,13 @@
                 A creative session where writers share their poetry and stories
                 in an open-mic setting.
               </p>
-              <button class="event-btn" onclick="joinEvent(this, 3)">
+
+              <button class="event-btn" onclick="joinEvent(4)">
                 Join event
               </button>
+              <!--changed 10 to 4-->
+
+              <!--  <button class="event-btn" onclick="joinEvent(this, 3)">Join event</button> -->
             </div>
           </div>
 
@@ -438,9 +450,13 @@
               <p><strong>Date:</strong> 25 May, 2025</p>
               <p><strong>Location:</strong> Together Culture workspace</p>
               <p>A great way to get to know all of our amazing members!</p>
-              <button class="event-btn" onclick="joinEvent(this, 4)">
+
+              <button class="event-btn" onclick="joinEvent(5)">
                 Join event
               </button>
+              <!--changed 11 to 5-->
+
+              <!--   <button class="event-btn" onclick="joinEvent(this, 4)">Join event</button> -->
             </div>
           </div>
         </div>
@@ -647,14 +663,17 @@
           return;
         }
         try {
+          /*
           // Retrieve userId from localStorage
           const userId = localStorage.getItem("userId");
-
+         
           if (!userId) {
             alert("Please log in to join the event.");
             return;
           }
 
+          
+ THIS WAS CONFLICTING. I COMMENTED IT OUT INCASE THIS CAUSES ERRORS */
           const response = await fetch(`${backendURL}/events/${eventId}/join`, {
             method: "POST",
             headers: { "Content-Type": "application/json" },
@@ -705,6 +724,7 @@
           if (response.ok) {
             localStorage.removeItem("loggedIn");
             localStorage.removeItem("userId");
+            localStorage.clear(); //Added to help with logic that uses localstorage
             alert("Logged out successfully!");
             window.location.href = "/non members/registration.html?tab=login";
           } else {
@@ -718,8 +738,7 @@
       //  Dynamic Events Loading
       window.addEventListener("DOMContentLoaded", async () => {
         try {
-          console.log(backendURL); //TODO for debugging
-          const response = await fetch(`${backendURL}/api/events`); //what is this calling?
+          const response = await fetch(`${backendURL}/events`); //what is this calling? Changing (`${backendURL}/api/events`) to (`${backendURL}/events`) as this is not a route i can find and throws error during testing
           if (!response.ok) {
             throw new Error("Failed to fetch events");
           }
@@ -728,9 +747,15 @@
           eventsGrid.innerHTML = "";
 
           eventsData.forEach((event) => {
-            // Use the event category if provided, otherwise default to "all"
-            const category = event.category || "all";
-            const imageURL = event.image_url || "/images/eventPlaceholder.jpg";
+            // Fallback category for filter if not present in DB:
+            const category = "all";
+
+            const imageURL = event.image_url
+              ? `${backendURL}/uploads/${event.image_url}`
+              : "/frontend/images/eventPlaceholder.jpg";
+
+            // Convert start_date/end_date if they exist
+
             const dateString =
               event.start_date && event.end_date
                 ? `${event.start_date} - ${event.end_date}`
