minor display changes

--- a/frontend/Members/Settings.html
+++ b/frontend/Members/Settings.html
@@ -188,8 +188,8 @@ html:not(.dark-style) .account-settings-links .list-group-item.active {
       <img src="/images/GuestIcon.svg" alt="user-profile-icon" />
     </a>
 
-    <!-- Logout button (hidden if not logged in) --> 
-    <button class="signup-btn" id="logoutBtn" style="display: none;">Logout</button>
+    <!-- Logout button (hidden if not logged in) style="display: none;"--> 
+    <button class="signup-btn" id="logoutBtn" >Logout</button>
   </div>
 </nav>
 
