--- a/frontend/Members/UserDashboard.html
+++ b/frontend/Members/UserDashboard.html
@@ -68,7 +68,7 @@
     display: flex;
     flex-direction: column;
     font-size: 14px;
-    color: gray;
+    color: white;
     margin-bottom: 5px;
 }
 
